fixed spacing on sidebar, dealt with persistent pop bars

--- a/client_app/src/styles/_main.scss
+++ b/client_app/src/styles/_main.scss
@@ -30,6 +30,7 @@
     float: left;
     width: 20%;
     padding: 10px;
+    margin-top: 50px;
 }
 
 #sideBar {
@@ -40,7 +41,7 @@
 }
 
 .label {
-    line-height: 22px;
+    line-height: 20px;
     top: 38px;
     transform: scale(0.75) translate(0px, -28px);
     transform-origin: left top 0px;
