--- a/client_app/src/styles/_sidebar.scss
+++ b/client_app/src/styles/_sidebar.scss
@@ -1,9 +1,17 @@
 .sideBar ul {
     list-style-type: none;
     margin: 0;
-    padding: 5px;
+    padding: 2px;
 }
 
 input {
     margin-top: 5px;
+}
+
+ul {
+    min-height: 20px;
+}
+
+.labelWrapper {
+    margin-top: 15px;
 }
